# CPP_tasks

1a/: BitArray.cpp  BitArray.hpp  CMakeLists.txt  README.txt  main.cpp  temp1.txt  test  time.cpp
1a/lib/: BitArray.cpp  BitArray.hpp  CMakeLists.txt
1a/tests/: CMakeLists.txt  test.cpp
Game 'Life'/: CMakeLists.txt  Life  Life.cpp  Life.hpp  main  main.cpp  var1.txt
Game 'Life'/lib/: Life.cpp  Life.hpp
Game Life/: CMakeLists.txt  README.md  input.txt  main.cpp  output.txt  test  test.cpp  var1.txt
Game Life/lib/: CMakeLists.txt  GamePars.cpp  GamePars.hpp  GameProcces.cpp  GameProcces.hpp  Life.cpp  Life.hpp  output.txt
Game Life/tests/: CMakeLists.txt  tests.cpp
Game Life/var/: var2.txt  var3.txt  var4.txt  var5.txt
SoundProccesor/: CMakeLists.txt  README.md  config.txt  main.cpp
SoundProccesor/lib/: CMakeLists.txt  Pars.cpp  Pars.hpp  reader.cpp  reader.hpp  sound.cpp  sound.hpp
home_works/: developer12  developer12.cpp  evolution  evolution10  evolution10.cpp  evolution11_1  evolution11_1.cpp  evolution11_2  evolution11_2.cpp  evolution8  evolution8.cpp  evolution9_1  evolution9_1.cpp  evolution9_2  evolution9_2.cpp  time.cpp  time14_2  time14_2.cpp
